# ghdiff

./: .gitignore  .installed.cfg  .travis.yml  LICENSE.md  LICENSE.txt  MANIFEST.in  README.rst  README.txt  buildout.cfg  default.css  demo.ipynb  ghdiff.py  setup.cfg  setup.py
develop-eggs/: ghdiff.egg-link
ghdiff.egg-info/: PKG-INFO  SOURCES.txt
parts/buildout/: site.py
src/: default.css  ghdiff.py  ipython_magic.py  tests.py
src/ghdiff.egg-info/: SOURCES.txt
